--- a/Lecture03/Chapter03.ipynb
+++ b/Lecture03/Chapter03.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# 準備\n",
     "!pip install tdl_pybasic\n",
-    "from tdl_pybasic.random import initialize, throw_dice"
+    "from tdl_pybasic.random import initialize, throw_coin"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "source": [
     "# コインを投げる\n",
     "# 表 0，裏 1\n",
-    "throw_dice() "
+    "throw_coin() "
    ]
   },
   {
@@ -54,11 +54,11 @@
     "# 10万回サイコロを振った結果を記録する\n",
     "# リスト版\n",
     "initialize()   # 初期化\n",
-    "dice_l = []   # 記録用のリストを初期化\n",
+    "coin_l = []   # 記録用のリストを初期化\n",
     "for i in range(100000): # 10万回ループを実行\n",
-    "    r = throw_dice() # コインを投げる\n",
+    "    r = throw_coin() # コインを投げる\n",
     "    # 復号演算子を使ってリストに結果を追加\n",
-    "    dice_l += [r]"
+    "    coin_l += [r]"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(dice_l)   # 長さを調べる"
+    "len(coin_l)   # 長さを調べる"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dice_l  # 結果を表示"
+    "coin_l  # 結果を表示"
    ]
   },
   {
@@ -92,8 +92,8 @@
     "last = -1  # 直前の裏表\n",
     "cont = 0  # 連続して裏がでている回数を保存する変数\n",
     "\n",
-    "# dice_lの要素(10万)でループ\n",
-    "for h_t in dice_l:\n",
+    "# coin_lの要素(10万)でループ\n",
+    "for h_t in coin_l:\n",
     "    if last == 1 and h_t == 1:\n",
     "        # 最新も直前も裏の場合 = 裏の連続\n",
     "        cont += 1\n",
@@ -133,10 +133,10 @@
     "# 10万回サイコロを振った結果を記録する\n",
     "# 文字列版\n",
     "initialize()   # 初期化\n",
-    "dice_s = \"\"   # 記録用の文字列を初期化\n",
+    "coin_s = \"\"   # 記録用の文字列を初期化\n",
     "for i in range(100000): # 10万回ループを実行\n",
-    "    r = throw_dice() # コインを投げる\n",
-    "    dice_s += str(r) # 文字列に結果を追加"
+    "    r = throw_coin() # コインを投げる\n",
+    "    coin_s += str(r) # 文字列に結果を追加"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(dice_s)"
+    "len(coin_s)"
    ]
   },
   {
@@ -161,7 +161,7 @@
     "for i in range(1, 30): # 1から29までループ\n",
     "    # \"1\"をi回繰り返した文字列を作る\n",
     "    cont_s = \"1\"*i\n",
-    "    if cont_s in dice_s:\n",
+    "    if cont_s in coin_s:\n",
     "        # \"1\"をi個並べた文字列が\n",
     "        # cont_sに含まれていた場合\n",
     "        max_len = i  # 最大回数を更新"
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "# Webブラウザの検索機能を使って試してみる\n",
-    "dice_s"
+    "coin_s"
    ]
   },
   {
@@ -197,7 +197,7 @@
     "for i in range(30, 1, -1): # 29から1までループ(逆順)\n",
     "    # \"1\"をi回繰り返した文字列を作る\n",
     "    cont_s = \"1\"*i\n",
-    "    if cont_s in dice_s:\n",
+    "    if cont_s in coin_s:\n",
     "        break   # ループを抜ける\n"
    ]
   },
@@ -232,11 +232,11 @@
    "source": [
     "# コインの裏表をリストに記録\n",
     "initialize()   # 初期化\n",
-    "dice_l = []   # 記録用のリストを初期化\n",
+    "coin_l = []   # 記録用のリストを初期化\n",
     "for i in range(100000): # 10万回ループを実行\n",
-    "    r = throw_dice() # コインを投げる\n",
+    "    r = throw_coin() # コインを投げる\n",
     "    # 復号演算子を使ってリストに結果を追加\n",
-    "    dice_l += [r]"
+    "    coin_l += [r]"
    ]
   },
   {
@@ -250,9 +250,9 @@
     "parts = []\n",
     "# 20ずつ保存する作業用リストを初期化\n",
     "ap_list = []\n",
-    "for i in range(len(dice_l)):\n",
+    "for i in range(len(coin_l)):\n",
     "    # 1つの要素をap_lilstに追加\n",
-    "    ap_list += [dice_l[i]]\n",
+    "    ap_list += [coin_l[i]]\n",
     "    if (i+1) % 20 == 0:\n",
     "        # i+1を20で割った余りが0\n",
     "        # つまり20回ごとに実行されるブロック\n",
@@ -283,7 +283,7 @@
    "outputs": [],
    "source": [
     "# スライスを使う\n",
-    "dice_l[0:20]"
+    "coin_l[0:20]"
    ]
   },
   {
@@ -292,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dice_l[0:20] == parts[0]"
+    "coin_l[0:20] == parts[0]"
    ]
   },
   {
@@ -302,7 +302,7 @@
    "outputs": [],
    "source": [
     "# 20飛びのインデックスを作る\n",
-    "for i in range(0, len(dice_l), 20):\n",
+    "for i in range(0, len(coin_l), 20):\n",
     "    print(i)\n"
    ]
   },
@@ -314,9 +314,9 @@
    "source": [
     "# 区切ったリストを記録するリストを初期化\n",
     "parts2 = []\n",
-    "for i in range(0, len(dice_l), 20):\n",
+    "for i in range(0, len(coin_l), 20):\n",
     "    # 20飛びのインデックスを使いループ\n",
-    "    parts2 += [dice_l[i:i+20]]"
+    "    parts2 += [coin_l[i:i+20]]"
    ]
   },
   {
