スライドに戻る部分を削除

--- a/Lecture03/Chapter02.ipynb
+++ b/Lecture03/Chapter02.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "# 1時間経過\n",
-    "hour += 1\n",
+    "hour += 1  # 「複合演算子」を使う\n",
     "f\"{hour}時{minute}分{second}秒\""
    ]
   },
