スライドに戻る部分を削除

--- a/Lecture03/Chapter04.ipynb
+++ b/Lecture03/Chapter04.ipynb
@@ -20,9 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 準備\n",
-    "!pip install tdl_pybasic -U\n",
-    "from tdl_pybasic.array import array_add, array_mul, load_sound, show_player, load_image, show_image, convolve"
+    "# 行列と演算\n",
+    "an_array = [1, 2, 3]   # 行列として扱うリストを定義する"
    ]
   },
   {
@@ -31,8 +30,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 行列と演算\n",
-    "an_array = [1, 2, 3]   # 行列として扱うリストを定義する"
+    "# ループを使って行列の足し算をする\n",
+    "r = []  # 結果のリストを初期化\n",
+    "for i in an_array:\n",
+    "    r = r + [i+10]\n",
+    "\n",
+    "r  # 結果を確認"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 準備\n",
+    "!pip install tdl_pybasic -U\n",
+    "from tdl_pybasic.array import array_add, array_mul, load_sound, show_player, load_image, show_image, convolve"
    ]
   },
   {
