--- a/Lecture06/Chapter02.ipynb
+++ b/Lecture06/Chapter02.ipynb
@@ -79,10 +79,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "※ スライドに戻ります"
+    "d[\"c\"] = 100  # 新しいキーと値を追加\n",
+    "c  # 未定義の変数cを参照"
    ]
   },
   {
@@ -158,12 +161,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "※ スライドに戻ります"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### アトリビュートへのアクセス"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,18 +183,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2020"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dt.year  # yearアトリビュートから年を得る"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2020"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# getattr()関数で年を得る\n",
     "getattr(dt, \"year\")"
@@ -192,9 +224,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "getattr(dt, \"month\")"
    ]
@@ -214,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random  # モジュールを変数のように扱い表示"
+    "random  # ライブラリを変数のように扱い表示"
    ]
   },
   {
@@ -251,6 +294,26 @@
    "metadata": {},
    "source": [
     "※ スライドに戻ります"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getattr(dt, \"weekday\")()"
    ]
   },
   {
