--- a/Lecture06/Chapter04.ipynb
+++ b/Lecture06/Chapter04.ipynb
@@ -78,13 +78,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "※ スライドに戻ります"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -100,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outer_var = 100\n",
+    "outer_var = 100  # モジュールスコープにある変数\n",
     "other_func()"
    ]
   },
@@ -111,7 +104,7 @@
    "outputs": [],
    "source": [
     "def another_func():\n",
-    "    outer_var = 200\n",
+    "    outer_var = 200  # ローカルスコープにある変数\n",
     "    print(outer_var)"
    ]
   },
@@ -176,13 +169,6 @@
    "outputs": [],
    "source": [
     "max([1, 2, 3, 4])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "※ 名前の汚染"
    ]
   },
   {
