不具合を修正

--- a/Lecture03/Chapter01.ipynb
+++ b/Lecture03/Chapter01.ipynb
@@ -120,6 +120,8 @@
    "outputs": [],
    "source": [
     "# 比較演算子\n",
+    "l1 = [1, 2, 3]\n",
+    "l2 = [1, 2, 4]\n",
     "if l1 == l2:\n",
     "    print(\"l1とl2は一致\")\n",
     "else:\n",
@@ -185,6 +187,8 @@
    "outputs": [],
    "source": [
     "# 比較演算子\n",
+    "s1 = \"Python\"\n",
+    "s2 = \"Programming\"\n",
     "if s1 == s2:\n",
     "    print(\"s1とs2は一致\")\n",
     "else:\n",
