--- a/Lecture04/Chapter01.ipynb
+++ b/Lecture04/Chapter01.ipynb
@@ -22,7 +22,8 @@
    "source": [
     "# 準備\n",
     "!pip install gtts # 音声合成ライブラリをインストール\n",
-    "from gtts import gTTS   # 音声合成ライブラリを読み込む"
+    "from gtts import gTTS   # 音声合成ライブラリを読み込む\n",
+    "import IPython.display"
    ]
   },
   {
