最後のセル，text変数の初期化忘れを修正

--- a/Lecture05/Chapter03.ipynb
+++ b/Lecture05/Chapter03.ipynb
@@ -177,6 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "text = \"\" # 本文用の文字列を初期化\n",
     "for p in div.find_all(\"p\"):\n",
     "    text += p.get_text()"
    ]
