--- a/Lecture05/Chapter04.ipynb
+++ b/Lecture05/Chapter04.ipynb
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "def array_add(l, n):\n",
-    "    # lのリストに対して行列の積算をする\n",
+    "    # lのリストに対して行列の加算をする\n",
     "    for n in range(len(l)):\n",
     "        l[n] = l[n]+n\n",
     "    return l"
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "# 実行時間を計測\n",
-    "%timeit -n 100 array_mul(l, 10)"
+    "%timeit -n 1000 array_add(l, 10)"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%timeit -n 100 a = np.zeros(10000); a += 10"
+    "%timeit -n 1000 a = np.zeros(10000); a += 10"
    ]
   },
   {
