誤字の修正など

--- a/Lecture02/Chapter01.ipynb
+++ b/Lecture02/Chapter01.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# コンピュータが一手目に5を選んだ状態を考える\n",
-    "p1 = 1  # 人間が一回目にどのマスを選ぶか\n",
+    "p1 = 1  # 人間が一手目にどのマスを選ぶか\n",
     "if p1 == 1:  # 1を選んだ場合\n",
     "    c2 = 7  # コンピュータは次に7を選ぶ"
    ]
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(c2)  # コンピュータが2回目に選ぶマスを表示"
+    "print(c2)  # コンピュータが2手目に選ぶマスを表示"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "# コンピュータが一手目に5を選んだ状態を考える\n",
-    "p1 = 3  # 人間が一回目にどのマスを選ぶか\n",
+    "p1 = 3  # 人間が一手目にどのマスを選ぶか\n",
     "if p1 == 1:  # 1を選んだ場合\n",
     "    c2 = 7  # コンピュータは次に7を選ぶ\n",
     "if p1 == 3:  # 3を選んだ場合\n",
@@ -71,7 +71,7 @@
     "if p1 == 9:  # 9を選んだ場合\n",
     "    c2 = 3  # コンピュータは次に3を選ぶ\n",
     "    \n",
-    "print(c2)  # コンピュータが2回目に選ぶマスを表示"
+    "print(c2)  # コンピュータが2手目に選ぶマスを表示"
    ]
   },
   {
@@ -108,12 +108,12 @@
    "outputs": [],
    "source": [
     "# コンピュータが5,9，人間が3を選んだ状態で\n",
-    "p2 = 1  # プレイヤーが一回目にどのマスを選ぶか\n",
+    "p2 = 1  # 人間が2手目にどのマスを選ぶか\n",
     "if p2 == 1:  # 1を選んだ場合\n",
     "    c3 = 2  # コンピュータは次に2を選ぶ\n",
-    "else:  # 3を選んだ場合\n",
+    "else:  # 1以外を選んだ場合\n",
     "    c3 = 1  # コンピュータは次に1を選ぶ\n",
-    "print(c3)  # コンピュータが3回目に選ぶマスを表示"
+    "print(c3)  # コンピュータが3手目に選ぶマスを表示"
    ]
   },
   {
