不具合の修正

--- a/Lecture04/Chapter02.ipynb
+++ b/Lecture04/Chapter02.ipynb
@@ -247,7 +247,7 @@
    "source": [
     "# 文字列の分割\n",
     "ssep = \"1000 1200 1300 1100\"  # 空白で区切られた文字列\n",
-    "list1 = ssep.split(\",\")  # 空白で「分割」して文字列のリストに変換\n",
+    "list1 = ssep.split(\" \")  # 空白で「分割」して文字列のリストに変換\n",
     "list1"
    ]
   },
