--- a/Lecture04/Chapter03.ipynb
+++ b/Lecture04/Chapter03.ipynb
@@ -229,7 +229,7 @@
     "# WikipediaのPythonのページの中身を取得\n",
     "\n",
     "import urllib.request\n",
-    "resp = urllib.request.urlopen(\"https://ja.wikipedia.org/wiki/\")\n",
+    "resp = urllib.request.urlopen(\"https://ja.wikipedia.org/wiki/Python\")\n",
     "body = resp.read()"
    ]
   },
