--- a/Lecture04/Chapter04.ipynb
+++ b/Lecture04/Chapter04.ipynb
@@ -157,7 +157,7 @@
     "    def heal(self, mp_con):\n",
     "        # 回復呪文を唱える\n",
     "        # mp_conにMPの消費量を渡す\n",
-    "        if self.magicpoint > mp_con:\n",
+    "        if self.magicpoint >= mp_con:\n",
     "            # HPを回復\n",
     "            self.hitpoint += mp_con*2\n",
     "            # MPを消費\n",
