不具合を修正

--- a/Lecture05/Chapter01.ipynb
+++ b/Lecture05/Chapter01.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# ドット区切りで乱数発生用の関数を呼び出す\n",
-    "random.random() # 0 < n < 1の乱数を生成"
+    "random.random() # 0 <= n < 1の乱数を生成"
    ]
   },
   {
