--- a/Lecture06/Chapter03.ipynb
+++ b/Lecture06/Chapter03.ipynb
@@ -156,6 +156,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NameErrorの出るケース"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -194,7 +201,7 @@
     "# AttributeError\n",
     "\n",
     "import random\n",
-    "random.undefined_function"
+    "random.undefined_function()"
    ]
   },
   {
