コメントなどを修正，不具合を修正

--- a/Lecture07/Chapter03.ipynb
+++ b/Lecture07/Chapter03.ipynb
@@ -29,6 +29,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "income = [8320, 8670, 9062, 9307, 9709]  # 直近5年の売り上げ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 演算用の関数\n",
     "sum(income)  # 合算"
    ]
@@ -61,7 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "any(l)  # "
+    "# リスト要素のいずれかが真と判断されるなら真\n",
+    "any(l)"
    ]
   },
   {
