タイトルを修正

--- a/Lecture06/Chapter01.ipynb
+++ b/Lecture06/Chapter01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture 6 辞書と名前空間"
+    "# Lecture 6 辞書型と名前空間"
    ]
   },
   {
