--- a/Lecture06/Chapter03.ipynb
+++ b/Lecture06/Chapter03.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture 6 辞書と名前空間"
+    "# Lecture 6 辞書型と名前空間"
    ]
   },
   {
@@ -180,7 +180,7 @@
    "source": [
     "# 起こしがちなNameError\n",
     "a = 0  # 初期化\n",
-    "b = b + a"
+    "c = c + a"
    ]
   },
   {
