--- a/Lecture07/Chapter02.ipynb
+++ b/Lecture07/Chapter02.ipynb
@@ -89,7 +89,8 @@
     "# 内包表記のifを使ってエラーを回避\n",
     "t_sep2 = \"1000 1200 1a00\"\n",
     "num_list = [int(n) for n in t_sep2.split()\n",
-    "                   if n.isnumeric() ]"
+    "                   if n.isnumeric() ]\n",
+    "num_list"
    ]
   },
   {
