--- a/Lecture09/Chapter01.ipynb
+++ b/Lecture09/Chapter01.ipynb
@@ -213,10 +213,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -O ch01_end_screen.png https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture09/ch01_end_screen.png\n",
-    "\n",
-    "from IPython.display import Image,display_jpeg\n",
-    "display_jpeg(Image(\"ch01_end_screen.png\"))"
+    "# 画像をダウンロードして表示\n",
+    "!wget -O ch01_end_screen.png https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture09/ch01_end_screen.png"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image,display_png\n",
+    "display_png(Image(\"ch01_end_screen.png\"))"
    ]
   },
   {
