書き出し後，DataFrameとして表示する下りを追加

--- a/Lecture09/Chapter02.ipynb
+++ b/Lecture09/Chapter02.ipynb
@@ -185,6 +185,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "wb = openpyxl.load_workbook(\"ch02/company_data4.xlsx\")\n",
+    "ws = wb.worksheets[0]\n",
+    "df = pd.DataFrame(ws.values)\n",
+    "df  # 表示"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%ls ch02"
    ]
   },
