変更前，変更後のシート画像を表示する下りを追加

--- a/Lecture09/Chapter03.ipynb
+++ b/Lecture09/Chapter03.ipynb
@@ -134,6 +134,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 画像をダウンロードして表示\n",
+    "!wget -O ch01_end_screen.png https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture09/stock_price1.png\n",
+    "from IPython.display import Image,display_png\n",
+    "display_png(Image(\"stock_price1.png\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 企業のデータでループ\n",
     "idx = 0\n",
     "for name, code in companies:\n",
@@ -149,6 +161,25 @@
    "outputs": [],
    "source": [
     "wb.save(\"ch03/stock_price_new.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 画像をダウンロードして表示\n",
+    "!wget -O ch01_end_screen.png https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture09/stock_price2.png\n",
+    "from IPython.display import Image,display_png\n",
+    "display_png(Image(\"stock_price2.png\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "※スライドに戻ります"
    ]
   },
   {
