formatdate()を読んでいるところにコメントを追加

--- a/Lecture08/Chapter01.ipynb
+++ b/Lecture08/Chapter01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pythonを読む・書く"
+    "# Lecture 8 Pythonを読む・書く"
    ]
   },
   {
@@ -151,7 +151,7 @@
     "message['Subject'] = subject\n",
     "message['From'] = from_addr\n",
     "message['To'] = reciever_addr\n",
-    "message['Date'] = formatdate()\n",
+    "message['Date'] = formatdate() # 送信時の日付文字列を代入\n",
     "\n",
     "# メールを送信する\n",
     "server_obj.sendmail(message[\"From\"], message[\"To\"],\n",
