サブタイトルの変更，コメントの追加，close.connection()をclose_connection()に編個う

--- a/Lecture08/Chapter02.ipynb
+++ b/Lecture08/Chapter02.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pythonを読む・書く"
+    "# Lecture 8 Pythonを読む・書く"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "source": [
     "import twitter\n",
     "\n",
-    "# apiオブジェクトを作る\n",
+    "# OAuth認証を行いapiオブジェクトを作る\n",
     "api = twitter.Api(consumer_key='YOUR COMSUMER KEY',\n",
     "                  consumer_secret='YOUR CONSUMER SECRET',\n",
     "                  access_token_key='YOUR TOKEN KEY',\n",
@@ -101,11 +101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Eメール送信プログラムを関数に分ける\n",
+    "# オブジェクトの生成，消滅に注目すると分けやすい\n",
     "\n",
     "def open_connection(from_addr, password):\n",
     "    # Eメール送信サーバーに接続，オブジェクトを返す\n",
@@ -119,11 +120,12 @@
     "    server.sendmail(message[\"From\"], message[\"To\"],\n",
     "                            message.as_string())\n",
     "\n",
+    "    \n",
     "def close_connection(server):\n",
     "    # サーバーとの接続を切る\n",
     "    server.close()\n",
     "\n",
-    "    \n",
+    "\n",
     "def create_message(from_addr, to_addr,\n",
     "                                subject, body):\n",
     "    # メール本文を作り，オブジェクトを返す\n",
@@ -152,7 +154,7 @@
     "# メールを送る\n",
     "send_message(server, message)\n",
     "# サーバーとの接続を切る\n",
-    "close.connection()"
+    "close_connection()"
    ]
   },
   {
@@ -187,7 +189,7 @@
     "    send_message(server, message)\n",
     "\n",
     "# サーバーとの接続を切る\n",
-    "close.connection()"
+    "close_connection()"
    ]
   },
   {
