パスワード取得用にコメントを追加，不具合を修正

--- a/Lecture08/Chapter01.ipynb
+++ b/Lecture08/Chapter01.ipynb
@@ -90,7 +90,9 @@
    "outputs": [],
    "source": [
     "# PythonでEメールを送る\n",
-    "# 出典 : https://qiita.com/nakasuke_/items/607cf74d8841f76e59c6"
+    "# 出典 : https://qiita.com/nakasuke_/items/607cf74d8841f76e59c6\n",
+    "# 上記URLの設定を参考に，二段階認証をOnにした上\n",
+    "# アプリパスワードを作成してパスワードとして利用して下さい"
    ]
   },
   {
@@ -154,7 +156,7 @@
     "message['Date'] = formatdate() # 送信時の日付文字列を代入\n",
     "\n",
     "# メールを送信する\n",
-    "server_obj.sendmail(message[\"From\"], message[\"To\"],\n",
+    "server.sendmail(message[\"From\"], message[\"To\"],\n",
     "                        message.as_string())\n",
     "\n",
     "# サーバーとの接続を切る\n",
