close_connection()に引数を追加，不具合を修正

--- a/Lecture08/Chapter02.ipynb
+++ b/Lecture08/Chapter02.ipynb
@@ -92,7 +92,7 @@
     "message['Date'] = formatdate()\n",
     "\n",
     "# メールを送信する\n",
-    "server_obj.sendmail(message[\"From\"], message[\"To\"],\n",
+    "server.sendmail(message[\"From\"], message[\"To\"],\n",
     "                        message.as_string())\n",
     "\n",
     "# サーバーとの接続を切る\n",
@@ -154,7 +154,7 @@
     "# メールを送る\n",
     "send_message(server, message)\n",
     "# サーバーとの接続を切る\n",
-    "close_connection()"
+    "close_connection(server)"
    ]
   },
   {
@@ -189,7 +189,7 @@
     "    send_message(server, message)\n",
     "\n",
     "# サーバーとの接続を切る\n",
-    "close_connection()"
+    "close_connection(server)"
    ]
   },
   {
