!lsを追加，ファイルの一覧を事前に表示するよう変更

--- a/Lecture08/Chapter04.ipynb
+++ b/Lecture08/Chapter04.ipynb
@@ -44,6 +44,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chapter01.ipynb Chapter02.ipynb Chapter04.ipynb essay.txt\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Colabの機能を使ってファイルの一覧を表示\n",
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
