余分な"があったのを除去

--- a/Lecture08/Chapter02.ipynb
+++ b/Lecture08/Chapter02.ipynb
@@ -182,7 +182,7 @@
     "for name, address in addrs:\n",
     "    # メールを生成する\n",
     "    subject = f\"{name}さんへ\"\n",
-    "    body = f\"{name}さん，お元気ですか？\"\"\n",
+    "    body = f\"{name}さん，お元気ですか？\"\n",
     "    message = create_message(from_addr, address,\n",
     "                                               subject, body)\n",
     "    # メールを送る\n",
