画像が表示されなかったのを修正

--- a/Lecture09/Chapter03.ipynb
+++ b/Lecture09/Chapter03.ipynb
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "# 画像をダウンロードして表示\n",
-    "!wget -O ch01_end_screen.png https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture09/stock_price1.png\n",
+    "!wget -O stock_price1.png https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture09/stock_price1.png\n",
     "from IPython.display import Image,display_png\n",
     "display_png(Image(\"stock_price1.png\"))"
    ]
@@ -170,7 +170,7 @@
    "outputs": [],
    "source": [
     "# 画像をダウンロードして表示\n",
-    "!wget -O ch01_end_screen.png https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture09/stock_price2.png\n",
+    "!wget -O stock_price2.png https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture09/stock_price2.png\n",
     "from IPython.display import Image,display_png\n",
     "display_png(Image(\"stock_price2.png\"))"
    ]
