画像が表示されなかったのを修正

--- a/Lecture09/Chapter04.ipynb
+++ b/Lecture09/Chapter04.ipynb
@@ -193,7 +193,17 @@
    "outputs": [],
    "source": [
     "# 画像をダウンロードして表示\n",
-    "!wget -O ch01_end_screen.png https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture09/dashboard.png"
+    "!wget -O dashboard.png https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture09/dashboard.png"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 画像をダウンロードして表示\n",
+    "!wget -O dashboard.png https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture09/dashboardb.png"
    ]
   },
   {
