ミススペルを修正，不要なアウトプットを削除

--- a/Lecture08/Chapter01.ipynb
+++ b/Lecture08/Chapter01.ipynb
@@ -115,13 +115,13 @@
    "source": [
     "# Eメール送信サーバーに接続，オブジェクトを得る\n",
     "server = smtplib.SMTP_SSL('smtp.gmail.com', 465, timeout=10)\n",
-    "server.login(\"YOUT@EMAIL.ADDR\", \"YOURPASSWORD\")\n",
+    "server.login(\"YOUR@EMAIL.ADDR\", \"YOURPASSWORD\")\n",
     "\n",
     "# メール本文を作り，オブジェクトを得る\n",
     "message = MIMEText(\"メール本文\")\n",
     "message['Subject'] = \"件名\"\n",
-    "message['From'] = \"YOUT@EMAIL.ADDR\"\n",
-    "message['To'] = \"reciever@email.addr\"\n",
+    "message['From'] = \"YOUR@EMAIL.ADDR\"\n",
+    "message['To'] = \"receiver@email.addr\"\n",
     "message['Date'] = formatdate()\n",
     "\n",
     "# メールを送信する\n",
@@ -139,10 +139,10 @@
    "outputs": [],
    "source": [
     "# 変更する部分を変数に置き換える\n",
-    "from_addr = \"YOUT@EMAIL.ADDR\"\n",
+    "from_addr = \"YOUR@EMAIL.ADDR\"\n",
     "password = \"YOURPASSWORD\"\n",
     "subject = \"件名\"\n",
-    "reciever_addr = \"reciever@email.addr\"\n",
+    "receiver_addr = \"receiver@email.addr\"\n",
     "body = \"メール本文\"\n",
     "\n",
     "server = smtplib.SMTP_SSL('smtp.gmail.com', 465, timeout=10)\n",
@@ -152,7 +152,7 @@
     "message = MIMEText(body)\n",
     "message['Subject'] = subject\n",
     "message['From'] = from_addr\n",
-    "message['To'] = reciever_addr\n",
+    "message['To'] = receiver_addr\n",
     "message['Date'] = formatdate() # 送信時の日付文字列を代入\n",
     "\n",
     "# メールを送信する\n",
