--- a/Lecture08/Chapter02.ipynb
+++ b/Lecture08/Chapter02.ipynb
@@ -75,10 +75,10 @@
     "from email.mime.text import MIMEText\n",
     "from email.utils import formatdate\n",
     "\n",
-    "from_addr = \"YOUT@EMAIL.ADDR\"\n",
+    "from_addr = \"YOUR@EMAIL.ADDR\"\n",
     "password = \"YOURPASSWORD\"\n",
     "subject = \"件名\"\n",
-    "reciever_addr = \"reciever@email.addr\"\n",
+    "receiver_addr = \"receiver@email.addr\"\n",
     "body = \"メール本文\"\n",
     "\n",
     "server = smtplib.SMTP_SSL('smtp.gmail.com', 465, timeout=10)\n",
@@ -88,7 +88,7 @@
     "message = MIMEText(body)\n",
     "message['Subject'] = subject\n",
     "message['From'] = from_addr\n",
-    "message['To'] = reciever_addr\n",
+    "message['To'] = receiver_addr\n",
     "message['Date'] = formatdate()\n",
     "\n",
     "# メールを送信する\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,13 +143,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from_addr = \"YOUT@EMAIL.ADDR\"\n",
+    "from_addr = \"YOUR@EMAIL.ADDR\"\n",
     "password = \"YOURPASSWORD\"\n",
     "\n",
     "# サーバーへ接続，ログインする\n",
     "server = open_connection(from_addr, password)\n",
     "# メールを生成する\n",
-    "message = create_message(from_addr, \"reciever@email.addr\",\n",
+    "message = create_message(from_addr, \"receiver@email.addr\",\n",
     "                                           \"ここに件名が入る\", \"ここに本文が入る\")\n",
     "# メールを送る\n",
     "send_message(server, message)\n",
