タイポを修正

--- a/Lecture10/Chapter01.ipynb
+++ b/Lecture10/Chapter01.ipynb
@@ -120,7 +120,7 @@
     "# 株価データを読み込む\n",
     "import pandas as pd\n",
     "url = \"https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture05/stock_chart.csv\"\n",
-    "pd = pd.read_csv(url)\n",
+    "df = pd.read_csv(url)\n",
     "df[:10]  # 10件のデータを確認"
    ]
   },
