--- a/Lecture10/Chapter02.ipynb
+++ b/Lecture10/Chapter02.ipynb
@@ -173,7 +173,7 @@
    "source": [
     "# 書き換える\n",
     "url = \"https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture05/stock_chart.csv\"\n",
-    "pd = pd.read_csv(url)"
+    "df = pd.read_csv(url)"
    ]
   },
   {
