--- a/Lecture10/Chapter04.ipynb
+++ b/Lecture10/Chapter04.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LSTMを使った回帰(2)"
+    "## ディープラーニング(2)"
    ]
   },
   {
@@ -50,7 +50,7 @@
     "#Get the stock quote\n",
     "df_orig = web.DataReader('AAPL', data_source='yahoo', start='2012-01-01', end='2020-12-07')\n",
     "url = \"https://raw.githubusercontent.com/shibats/tdl_python_basic/main/Lecture05/stock_chart.csv\"\n",
-    "pd = pd.read_csv(url)"
+    "df = pd.read_csv(url)"
    ]
   },
   {
