--- a/Lecture10/Chapter01.ipynb
+++ b/Lecture10/Chapter01.ipynb
@@ -176,9 +176,12 @@
     "x2 = np.linspace(0, 40, 40) \n",
     "X2 = x2.reshape(-1, 1)\n",
     "pred_y = pl.predict(X2)\n",
-    "plt.scatter(x2, df[\"close\"][:40].values, c=\"b\", alpha=0.2)\n",
+    "plt.scatter(x2, df[\"close\"][10:50].values, c=\"b\", alpha=0.2)\n",
     "\n",
     "plt.plot(x2, pred_y, c=\"b\")\n",
+    "\n",
+    "plt.plot([30, 30], [5000,  6000], 'r')  # 30の位置に赤い線を引く\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -208,7 +211,9 @@
     "\n",
     "plt.legend() # ラベルを表示\n",
     "\n",
-    "plt.scatter(x2, df[\"close\"][:40].values, alpha=0.2)\n",
+    "plt.scatter(x2, df[\"close\"][10:50].values, alpha=0.2)\n",
+    "# 30の位置に灰色の点線を引く\n",
+    "plt.plot([30, 30], [5000,  6000], 'gray', linestyle=':')\n",
     "plt.show()\n"
    ]
   },
